<resources>
    <!-- Main layout -->
    <string name="app_name">Maastokartta Go</string>
    <string name="zoom_p">Zoom +</string>
    <string name="zoom_m">Zoom -</string>
    <string name="maasto">Maastokartta</string>
    <string name="tausta">Taustakartta</string>
    <string name="orto">Ilmakuva</string>
    <string name="oma">Oma URL</string>
    <string name="screenmode">Näytön tila</string>
    <string name="screenoff">Saa sammua</string>
    <string name="screenchg">Latauksessa päällä</string>
    <string name="screenon">Aina päällä</string>
    <string name="diron">Näytä suunta</string>
    <string name="rulon">Näytä mittajana</string>
    <string name="speedon">Näytä nopeus</string>
    <string name="settings">Asetukset</string>
    <string name="orange">Oranssi osoitin</string>
    <string name="rotate">Käännä kartta</string>
    <string name="kartat">Kartat</string>
    <string name="rajat">Kiinteistörajat</string>

    <!-- About dialog -->
    <string name="about">Tietoja</string>
    <string name="abouttitle">Maastokartta Go tietoja</string>
    <string name="location">Sijainti kartalla</string>
    <string name="licenses">Lisenssit</string>
    <string name="licinfo">Kartta-aineistojen tarjoaja ja lisenssit:\n\thttps://kartat.kapsi.fi\n\thttps://www.kapsi.fi\n</string>
    <string name="lat_n">N: %.6f</string>
    <string name="lng_n">E: %.6f</string>

    <!-- Marker dialog -->
    <string name="markerlist">Omat paikat</string>
    <string name="marker">Paikan tiedot</string>
    <string name="latitude">Latitudi N:</string>
    <string name="longitude">Longitudi E:</string>
    <string name="name">Nimi:</string>
    <string name="show">Näytä kartalla</string>

    <!-- Dialog buttons -->
    <string name="close">Sulje</string>
    <string name="save">Tallenna</string>
    <string name="remove">Poista</string>

    <!-- Own URL dialog -->
    <string name="ownurl">Oma URL</string>
    <string name="ownurlinfo">Esimerkki tiilipalvelimen URL osoitteesta:\n\thttps://a.tile.palvelin.org/${z}/${x}/${y}.png\n\nVoit myös käyttää lyhennettyä muotoa:\n\thttps://a.tile.palvelin.org/</string>
</resources>
