<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tiles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ctr_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/center"
        app:srcCompat="@drawable/center"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="273dp"
        tools:srcCompat="@drawable/center" />

    <ImageView
        android:id="@+id/dir_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/center"
        app:srcCompat="@drawable/direction"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="273dp"
        tools:srcCompat="@drawable/direction" />

    <ImageButton
        android:id="@+id/btn_zoom_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/zoom_p"
        app:layout_constraintBottom_toTopOf="@+id/btn_zoom_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_plus" />

    <ImageButton
        android:id="@+id/btn_zoom_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/zoom_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_minus" />

    <SeekBar
        android:id="@+id/sb_brightness"
        style="@android:style/Widget.DeviceDefault.SeekBar"
        android:layout_width="149dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:max="255"
        android:progress="200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <TextView
        android:id="@+id/map_ruler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/map_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="344dp"
        tools:text="100" />

    <ImageButton
        android:id="@+id/btn_markers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/btn_maps"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

</android.support.constraint.ConstraintLayout>